# prose-steering

./: README.md  pyproject.toml
dataset/: high_prose.json
output/: high-prose-spanish-sys-prompt.json  high-prose.json
scripts/: elo_plot.py  elo_sampling.py  steer.py
src/prose_steering/: axis.py  config.py  contrastive.py  hf.py  steer.py  utils.py
